k8s/app-scala-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-scala
  annotations:
    app-scala.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app-scala.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 9000
